[gd_scene load_steps=11 format=2]

[ext_resource path="res://Recursos/Visuales/Intro/logo.PNG" type="Texture" id=1]
[ext_resource path="res://Recursos/Textos/Fuentes/Bebas.tres" type="DynamicFont" id=2]
[ext_resource path="res://Recursos/Visuales/Interfaz/jugar_btn.png" type="Texture" id=3]
[ext_resource path="res://Codigos/Locales/Ambientes/Intro_Paparruchas.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Visuales/Fondos/vidrio_izquierda.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Visuales/Fondos/vidrio_arriba.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Visuales/Fondos/vidrio_derecha.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Visuales/Fondos/vidrio_abajo.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Recursos/Textos/Fuentes/DaxlinePro-Bold.otf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[node name="Intro_Paparruchas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.00012207
margin_top = -6.10352e-05
color = Color( 0.0823529, 0.12549, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1112.0
margin_top = -149.907
margin_right = 1112.0
margin_bottom = 991.093
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 1112, 570.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1280.0
margin_right = 1280.0
margin_bottom = 1141.0
rect_pivot_offset = Vector2( 1600, 570.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="definicion" type="RichTextLabel" parent="HSeparator"]
margin_right = 2560.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.992157, 0.992157, 0.819608, 1 )
bbcode_enabled = true
bbcode_text = "[center]1. s. f. [wave amp=50 freq=2]Noticia falsa y desatinada."
text = "1. s. f. Noticia falsa y desatinada."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HSeparator"]
margin_top = 204.0
margin_right = 2560.0
margin_bottom = 484.0

[node name="Jugar" type="Button" parent="HSeparator/CenterContainer"]
margin_left = 1024.0
margin_right = 1536.0
margin_bottom = 280.0
rect_min_size = Vector2( 512, 250 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.835294, 0.454902, 0.4, 1 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="blanco" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0.52549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="blanco"]

[node name="vidrio_arriba" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="vidrio_arriba"]

[node name="vidrio_izquierda" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="vidrio_izquierda"]

[node name="vidrio_derecha" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="vidrio_derecha"]

[node name="vidrio_abajo" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="vidrio_abajo"]

[connection signal="pressed" from="HSeparator/CenterContainer/Jugar" to="." method="_on_Jugar_pressed"]
